--- a/resources/views/common/footer.twig
+++ b/resources/views/common/footer.twig
@@ -207,19 +207,19 @@
 <!-- JS
 ============================================ -->
 <!-- jQuery JS -->
-<script src="assets/js/vendor/jquery.min.js"></script>
+<script src="{{plugin_path("Plentymarket")}}/js/vendor/jquery.min.js"></script>
 
 <!-- Popper JS -->
-<script src="assets/js/popper.min.js"></script>
+<script src="{{plugin_path("Plentymarket")}}/js/popper.min.js"></script>
 
 <!-- Bootstrap JS -->
-<script src="assets/js/bootstrap.min.js"></script>
+<script src="{{plugin_path("Plentymarket")}}/js/bootstrap.min.js"></script>
 
 <!-- Plugins JS -->
-<script src="assets/js/plugins.js"></script>
+<script src="{{plugin_path("Plentymarket")}}/js/plugins.js"></script>
 
 <!-- Main JS -->
-<script src="assets/js/main.js"></script>
+<script src="{{plugin_path("Plentymarket")}}/js/main.js"></script>
 
 </body>
 
