--- a/resources/views/index/index.twig
+++ b/resources/views/index/index.twig
@@ -1,4 +1,6 @@
-﻿<!--=============================================
+﻿{% include 'Plentymarket::common.header'%}
+
+<!--=============================================
 =            Hero Area One         =
 =============================================-->
 
@@ -1873,3 +1875,4 @@
 </div>
 <!--=====  End of Quick view modal  ======-->
 
+{% include 'Plentymarket::common.footer'%}
