--- a/resources/views/common/footer.twig
+++ b/resources/views/common/footer.twig
@@ -32,7 +32,7 @@
 
 						<div class="single-block">
 							<h3 class="footer-title">Check Order Status</h3>
-							<p> <a href="my-account.html">Click here</a> to check Order Status.</p>
+							<p><a href="my-account.html">Click here</a> to check Order Status.</p>
 						</div>
 
 						<!--=======  End of Single block  =======-->
@@ -104,7 +104,8 @@
 
 					<div class="single-footer">
 						<h3 class="footer-title mb-20">Address</h3>
-						<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi corporis, necessitatibus officiis dolor facere ipsum rem sed itaque ea eos.</p>
+						<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi corporis, necessitatibus
+							officiis dolor facere ipsum rem sed itaque ea eos.</p>
 						<p>New York</p>
 					</div>
 
@@ -125,8 +126,10 @@
 
 					<div class="app-download-area">
 						<span class="title">Free App:</span>
-						<a target="_blank" href="#" class="app-download-btn apple-store"><i class="fa fa-apple"></i> Apple Store</a>
-						<a target="_blank" href="#" class="app-download-btn google-play"><i class="fa fa-android"></i> Google play</a>
+						<a target="_blank" href="#" class="app-download-btn apple-store"><i class="fa fa-apple"></i>
+							Apple Store</a>
+						<a target="_blank" href="#" class="app-download-btn google-play"><i class="fa fa-android"></i>
+							Google play</a>
 					</div>
 
 					<!--=======  End of app download area  =======-->
@@ -135,12 +138,17 @@
 					<div class="social-link">
 						<span class="title">Follow Us:</span>
 						<ul>
-							<li><a target="_blank" href="https://www.twitter.com/"><i class="fa fa-twitter"></i></a></li>
+							<li><a target="_blank" href="https://www.twitter.com/"><i class="fa fa-twitter"></i></a>
+							</li>
 							<li><a target="_blank" href="https://www.rss.com/"><i class="fa fa-rss"></i></a></li>
-							<li><a target="_blank" href="https://plus.google.com/"><i class="fa fa-google-plus"></i></a></li>
-							<li><a target="_blank" href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a></li>
-							<li><a target="_blank" href="https://www.youtube.com/"><i class="fa fa-youtube"></i></a></li>
-							<li><a target="_blank" href="https://www.instagram.com/"><i class="fa fa-instagram"></i></a></li>
+							<li><a target="_blank" href="https://plus.google.com/"><i class="fa fa-google-plus"></i></a>
+							</li>
+							<li><a target="_blank" href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a>
+							</li>
+							<li><a target="_blank" href="https://www.youtube.com/"><i class="fa fa-youtube"></i></a>
+							</li>
+							<li><a target="_blank" href="https://www.instagram.com/"><i class="fa fa-instagram"></i></a>
+							</li>
 						</ul>
 					</div>
 				</div>
@@ -186,7 +194,8 @@
 				<div class="col-lg-12">
 					<!--=======  Copyright text  =======-->
 
-					<p class="copyright-text">Copyright @ 2018 <a href="http://www.bootstrapmb.com/">Pataku</a>. All Rights Reserved</p>
+					<p class="copyright-text">Copyright @ 2018 <a href="http://www.bootstrapmb.com/">Pataku</a>. All
+						Rights Reserved</p>
 
 					<!--=======  End of Copyright text  =======-->
 				</div>
