--- a/resources/views/index/login-register.twig
+++ b/resources/views/index/login-register.twig
@@ -1,26 +1,5 @@
 ﻿{%include 'Plentymarket::common.header'%}
-
-<!--=============================================
-=            Breadcrumb Area         =
-=============================================-->
-
-<div class="breadcrumb-area breadcrumb-bg pt-85 pb-85 mb-80">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-12">
-				<div class="breadcrumb-container">
-					<ul>
-						<li><a href="index.html">Home</a> <span class="separator">/</span></li>
-						<li class="active">Login Register</li>
-					</ul>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-
-<!--=====  End of Breadcrumb Area  ======-->
-
+{%include 'Plentymarket::common.breadcrumb'%}
 
 <!--=============================================
 =            Login Register page content         =
@@ -31,35 +10,35 @@
 		<div class="row">
 			<div class="col-sm-12 col-md-12 col-xs-12 col-lg-6 mb-30">
 				<!-- Login Form s-->
-				<form action="#">
+				<form action="#" id="login">
 
 					<div class="login-form">
-						<h4 class="login-title">Login</h4>
+						<h4 class="login-title">{{trans("Plentymarket::WebIndexLoginRegister.login")}}</h4>
 
 						<div class="row">
 							<div class="col-md-12 col-12 mb-20">
-								<label>Email Address*</label>
-								<input class="mb-0" type="email" placeholder="Email Address">
+								<label>{{trans("Plentymarket::WebIndexLoginRegister.emailAddress")}}*</label>
+								<input class="mb-0" type="email" placeholder="{{trans("Plentymarket::WebIndexLoginRegister.emailAddress")}}">
 							</div>
 							<div class="col-12 mb-20">
-								<label>Password</label>
-								<input class="mb-0" type="password" placeholder="Password">
+								<label>{{trans("Plentymarket::WebIndexLoginRegister.password")}}</label>
+								<input class="mb-0" type="password" placeholder="{{trans("Plentymarket::WebIndexLoginRegister.password")}}">
 							</div>
 							<div class="col-md-8">
 
 								<div class="check-box d-inline-block ml-0 ml-md-2 mt-10">
 									<input type="checkbox" id="remember_me">
-									<label for="remember_me">Remember me</label>
+									<label for="remember_me">{{trans("Plentymarket::WebIndexLoginRegister.rememberMe")}}</label>
 								</div>
 
 							</div>
 
 							<div class="col-md-4 mt-10 mb-20 text-left text-md-right">
-								<a href="#"> Forgotten pasward?</a>
+								<a href="#"> {{trans("Plentymarket::WebIndexLoginRegister.forgottenPassword")}}?</a>
 							</div>
 
 							<div class="col-md-12">
-								<button class="register-button mt-0">Login</button>
+								<button class="register-button mt-0">{{trans("Plentymarket::WebIndexLoginRegister.login")}}</button>
 							</div>
 
 						</div>
@@ -68,38 +47,27 @@
 				</form>
 			</div>
 			<div class="col-sm-12 col-md-12 col-lg-6 col-xs-12">
-				<form action="#">
-
+				<form action="#" id="register">
 					<div class="login-form">
-						<h4 class="login-title">Register</h4>
-
+						<h4 class="login-title">{{trans("Plentymarket::WebIndexLoginRegister.register")}}</h4>
 						<div class="row">
-							<div class="col-md-6 col-12 mb-20">
-								<label>First Name</label>
-								<input class="mb-0" type="text" placeholder="First Name">
-							</div>
-							<div class="col-md-6 col-12 mb-20">
-								<label>Last Name</label>
-								<input class="mb-0" type="text" placeholder="Last Name">
-							</div>
 							<div class="col-md-12 mb-20">
-								<label>Email Address*</label>
-								<input class="mb-0" type="email" placeholder="Email Address">
+								<label>{{trans("Plentymarket::WebIndexLoginRegister.emailAddress")}}*</label>
+								<input class="mb-0" type="email" placeholder="{{trans("Plentymarket::WebIndexLoginRegister.emailAddress")}}">
 							</div>
 							<div class="col-md-6 mb-20">
-								<label>Password</label>
-								<input class="mb-0" type="password" placeholder="Password">
+								<label>{{trans("Plentymarket::WebIndexLoginRegister.password")}}</label>
+								<input class="mb-0" type="password" placeholder="{{trans("Plentymarket::WebIndexLoginRegister.password")}}">
 							</div>
 							<div class="col-md-6 mb-20">
-								<label>Confirm Password</label>
-								<input class="mb-0" type="password" placeholder="Confirm Password">
+								<label>{{trans("Plentymarket::WebIndexLoginRegister.confirmPassword")}}</label>
+								<input class="mb-0" type="password" placeholder="{{trans("Plentymarket::WebIndexLoginRegister.confirmPassword")}}">
 							</div>
 							<div class="col-12">
-								<button class="register-button mt-0">Register</button>
+								<button class="register-button mt-0">{{trans("Plentymarket::WebIndexLoginRegister.register")}}</button>
 							</div>
 						</div>
 					</div>
-
 				</form>
 			</div>
 		</div>
@@ -108,3 +76,46 @@
 
 <!--=====  End of Login Register page content  ======-->
 {%include 'Plentymarket::common.footer'%}
+<script type="text/javascript">
+    $("#login").on("submit", function()
+    {
+        var email = $(this).find("input[name=email]").val();
+        var password = $(this).find("input[name=password]").val();
+        $.get("/api/index/login", {
+            email: email,
+            password: password
+        }, function(response)
+        {
+            if (response.code == 1)
+            {
+                window.location = "/";
+            }
+            else
+            {
+                alert(response.message);
+            }
+        });
+        return false;
+    });
+
+    $("#register").on("submit", function()
+    {
+        var email = $(this).find("input[name=email]").val();
+        var password = $(this).find("input[name=password]").val();
+        $.get("/api/index/register", {
+            email: email,
+            password: password
+        }, function()
+        {
+            if (response.code == 1)
+            {
+                window.location = "/";
+            }
+            else
+            {
+                alert(response.message);
+            }
+        });
+        return false;
+    });
+</script>
