--- a/resources/views/common/breadcrumb.twig
+++ b/resources/views/common/breadcrumb.twig
@@ -10,7 +10,7 @@
 					<ul>
 						{%for key, value in breadcrumb%}
 							<li {%if loop.last%}class="active"{%endif%}>
-								<a href="{{value}}">{{key}}</a> {%if !loop.last %}
+								<a href="{{value}}">{{key}}</a> {%if loop.last is sameas(false)%}
 									<span class="separator">/</span> {%endif%}</li>
 						{%endfor%}
 						{#						<li><a href="/">Home</a> <span class="separator">/</span></li>#}
