--- a/resources/views/common/header.twig
+++ b/resources/views/common/header.twig
@@ -339,13 +339,7 @@
 					<div class="main-menu">
 						<nav>
 							<ul>
-								<li class="active menu-item-has-children"><a href="#">HOME</a>
-									<ul class="sub-menu">
-										<li><a href="index.html">Home Shop 1</a></li>
-										<li><a href="index-2.html">Home Shop 2</a></li>
-										<li><a href="index-3.html">Home Shop 3</a></li>
-										<li><a href="index-4.html">Home Shop 4</a></li>
-									</ul>
+								<li class="active"><a href="/">{{trans("Plentymarket::common.home")}}</a>
 								</li>
 								<li class="menu-item-has-children"><a href="shop-left-sidebar.html">Shop</a>
 									<ul class="sub-menu">
@@ -430,7 +424,7 @@
 										<li><a href="blog-post-video-format.html">Blog Post Video Format</a></li>
 									</ul>
 								</li>
-								<li><a href="contact.html">CONTACT</a></li>
+								<li><a href="/index/contact">{{trans('Plentymarket::Common.contact')}}</a></li>
 							</ul>
 						</nav>
 					</div>
