--- a/resources/views/index/product-list-category.twig
+++ b/resources/views/index/product-list-category.twig
@@ -83,7 +83,7 @@
 
                                 </div>
                                 <div class="content">
-                                    <p class="product-title"><a href="/index/product/{item.id}">Field Messenger</a></p>
+                                    <p class="product-title"><a href="/index/product/{item.id}">{item.name}</a></p>
                                     <p class="product-price">
                                         <span class="main-price discounted">{{item.format_main_price}}</span>
                                         <span class="discounted-price">{{item.format_discount_price}}</span>
