--- a/resources/views/index/product-list-category.twig
+++ b/resources/views/index/product-list-category.twig
@@ -110,16 +110,18 @@
 
                                     <!--=======  badge  =======-->
 
+                                    <!--
                                     <div class="product-badge">
                                         <span class="new-badge">NEW</span>
                                         <span class="discount-badge">-8%</span>
                                     </div>
+                                    -->
 
                                     <!--=======  End of badge  =======-->
 
                                 </div>
                                 <div class="content">
-                                    <p class="product-title"><a href="/index/product/{item.id}">{{item.name}}</a></p>
+                                    <p class="product-title"><a href="/index/product/{{item.id}}">{{item.name}}</a></p>
                                     <div class="rating ">
                                         <i class="lnr lnr-star active"></i>
                                         <i class="lnr lnr-star active"></i>
