--- a/resources/views/index/product.twig
+++ b/resources/views/index/product.twig
@@ -76,7 +76,7 @@
                         <span class="discounted-price">{{item.format_discount_price}}</span>
                     </p>
                     <p class="product-description mb-15">
-                        {{item.desc}}
+                        {{item.short_desc}}
                     </p>
                     <div class="cart-buttons mb-30">
                         <p class="mb-15">{{trans("Plentymarket::WebIndexProduct.quantity")}}</p>
@@ -133,34 +133,27 @@
                 <div class="tab-slider-wrapper">
                     <nav>
                         <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                            <a class="nav-item nav-link active" id="description-tab" data-toggle="tab" href="#description" role="tab"
-                               aria-selected="true">Description</a>
-                            <a class="nav-item nav-link" id="features-tab" data-toggle="tab" href="#features" role="tab"
-                               aria-selected="false">Features</a>
-                            <a class="nav-item nav-link" id="review-tab" data-toggle="tab" href="#review" role="tab"
-                               aria-selected="false">Reviews (3)</a>
+	                        <a class="nav-item nav-link active" id="description-tab" data-toggle="tab" href="#description" role="tab"
+	                           aria-selected="true">Description</a>
+	                        <a class="nav-item nav-link" id="features-tab" data-toggle="tab" href="#features" role="tab"
+	                           aria-selected="false">Features</a>
+	                        <a class="nav-item nav-link" id="review-tab" data-toggle="tab" href="#review" role="tab"
+	                           aria-selected="false">Reviews (3)</a>
                         </div>
                     </nav>
-                    <div class="tab-content" id="nav-tabContent">
-                        <div class="tab-pane fade show active" id="description" role="tabpanel" aria-labelledby="description-tab">
-                            <p class="product-desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque
-                                obcaecati tempore reiciendis neque facere! Eos, necessitatibus? Fugit iure veritatis
-                                quidem velit quaerat quos qui pariatur dolore facilis, aliquid quae voluptatibus dicta.
-                                Quae harum velit hic molestias, eius ab cum quidem voluptates modi maiores laboriosam
-                                iusto excepturi ex, recusandae aut, facere earum ad vero aperiam. Minima dolores
-                                dignissimos ab ipsam atque placeat sapiente officia debitis nobis porro at quia
-                                veritatis, quidem id repudiandae ex tempore non. Enim soluta explicabo atque adipisci
-                                itaque.</p>
-                        </div>
-                        <div class="tab-pane fade" id="features" role="tabpanel" aria-labelledby="features-tab">
-                            <table class="table-data-sheet">
-                                <tbody>
-                                <tr class="odd">
+	                <div class="tab-content" id="nav-tabContent">
+		                <div class="tab-pane fade show active" id="description" role="tabpanel" aria-labelledby="description-tab">
+			                <p class="product-desc">{{item.desc}}</p>
+		                </div>
+		                <div class="tab-pane fade" id="features" role="tabpanel" aria-labelledby="features-tab">
+			                <table class="table-data-sheet">
+				                <tbody>
+				                <tr class="odd">
 
-                                    <td>Name</td>
-                                    <td>Kaoreet lobortis sagittis laoreet</td>
-                                </tr>
-                                <tr class="even">
+					                <td>Name</td>
+					                <td>Kaoreet lobortis sagittis laoreet</td>
+				                </tr>
+				                <tr class="even">
 
                                     <td>Color</td>
                                     <td>Yellow</td>
