--- a/resources/views/index/product-list-category.twig
+++ b/resources/views/index/product-list-category.twig
@@ -61,7 +61,7 @@
 
                             <div class="ptk-product shop-grid-view-product">
                                 <div class="image">
-                                    <a href="/index/product/{item.id}">
+                                    <a href="/index/product/{{item.id}}">
                                         <img src="{{item.images.0}}" class="img-fluid" alt="">
                                     </a>
                                     <!--=======  hover icons  =======-->
@@ -104,7 +104,7 @@
 
                             <div class="ptk-product shop-list-view-product">
                                 <div class="image">
-                                    <a href="/index/product/{item.id}">
+                                    <a href="/index/product/{{item.id}}">
                                         <img src="assets/images/products/product01.jpg" class="img-fluid" alt="">
                                     </a>
 
