--- a/resources/views/common/header.twig
+++ b/resources/views/common/header.twig
@@ -32,6 +32,7 @@
 	<!-- Modernizer JS -->
 	<script src="{{plugin_path("Plentymarket")}}/js/vendor/modernizr-2.8.3.min.js"></script>
 
+	<script src="https://use.fontawesome.com/c30a5809a1.js"></script>
 </head>
 
 <body>
