--- a/resources/css/linear-icon.css
+++ b/resources/css/linear-icon.css
@@ -1,11 +1,11 @@
 @font-face {
 	font-family: 'Linearicons-Free';
-	src: url('../fonts/Linearicons-Free.eot?w118d');
-	src: url('../fonts/Linearicons-Free.eot?#iefixw118d') format('embedded-opentype'),
-	url('../fonts/Linearicons-Free.woff2?w118d') format('woff2'),
-	url('../fonts/Linearicons-Free.woff?w118d') format('woff'),
-	url('../fonts/Linearicons-Free.ttf?w118d') format('truetype'),
-	url('../fonts/Linearicons-Free.svg?w118d#Linearicons-Free') format('svg');
+	src: url('https://cdn.linearicons.com/free/1.0.0/Linearicons-Free.eot');
+	src: url('https://cdn.linearicons.com/free/1.0.0/Linearicons-Free.eot?#iefix') format('embedded-opentype'),
+	url('https://cdn.linearicons.com/free/1.0.0/Linearicons-Free.woff2') format('woff2'),
+	url('https://cdn.linearicons.com/free/1.0.0/Linearicons-Free.woff') format('woff'),
+	url('https://cdn.linearicons.com/free/1.0.0/Linearicons-Free.ttf') format('truetype'),
+	url('https://cdn.linearicons.com/free/1.0.0/Linearicons-Free.svg#Linearicons-Free') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
