--- a/resources/views/index/product.twig
+++ b/resources/views/index/product.twig
@@ -67,7 +67,7 @@
                         <span class="discounted-price">{{item.format_discount_price}}</span>
                     </p>
                     <p class="product-description mb-15">
-                        {{strip_tags(item.short_desc)}}
+                        {{item.short_desc}}
                     </p>
                     <div class="cart-buttons mb-30">
                         <p class="mb-15">{{trans("Plentymarket::WebIndexProduct.quantity")}}</p>
@@ -134,7 +134,7 @@
                     </nav>
                     <div class="tab-content" id="nav-tabContent">
                         <div class="tab-pane fade show active" id="description" role="tabpanel" aria-labelledby="description-tab">
-                            <p class="product-desc">{{strip_tags(item.desc)}}</p>
+                            <p class="product-desc">{{item.desc}}</p>
                         </div>
                         <div class="tab-pane fade" id="features" role="tabpanel" aria-labelledby="features-tab">
                             <table class="table-data-sheet">
