--- a/resources/views/index/product-list-category.twig
+++ b/resources/views/index/product-list-category.twig
@@ -133,7 +133,7 @@
                                         <span class="main-price discounted">{{item.format_main_price}}</span>
                                         <span class="discounted-price">{{item.format_discount_price}}</span>
                                     </p>
-                                    <p class="product-description">{{strip_tags(item.short_desc)}}</p>
+                                    <p class="product-description">{{item.short_desc}}</p>
                                     <!--=======  hover icons  =======-->
                                     <div class="hover-icons">
                                         <a class="hover-icon" href="#" data-toggle="modal" data-target="#quick-view-modal-container"><i class="lnr lnr-eye"></i></a>
