--- a/resources/views/index/product-list-category.twig
+++ b/resources/views/index/product-list-category.twig
@@ -105,17 +105,15 @@
                             <div class="ptk-product shop-list-view-product">
                                 <div class="image">
                                     <a href="/index/product/{{item.id}}">
-                                        <img src="assets/images/products/product01.jpg" class="img-fluid" alt="">
+                                        <img src="{{item.images.0}}" class="img-fluid" alt="">
                                     </a>
 
                                     <!--=======  badge  =======-->
 
-                                    <!--
                                     <div class="product-badge">
                                         <span class="new-badge">NEW</span>
                                         <span class="discount-badge">-8%</span>
                                     </div>
-                                    -->
 
                                     <!--=======  End of badge  =======-->
 
