--- a/resources/views/index/product.twig
+++ b/resources/views/index/product.twig
@@ -82,7 +82,7 @@
                             <a href="#" id="remove_from_wishlist" data-id="{{item.variationId}}">
                                 <i class="fa fa-trash-o"></i>{{trans("Plentymarket::WebIndexProduct.remove_from_wishlist")}}
                             </a>
-                        {%elseif%}
+                        {%else%}
                             <a href="#" id="add_to_wishlist" data-id="{{item.variationId}}">
                                 <i class="fa fa-heart"></i>{{trans("Plentymarket::WebIndexProduct.add_to_wishlist")}}
                             </a>
